# race-agent

./: .env.example  .gitignore  .oxlintrc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  commitlint.config.cjs  compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  commitlint.yml  release-please.yml
apps/collector-windows/: Cargo.toml  app.manifest  build.rs
apps/collector-windows/src/: collector_service.rs  main.rs  windows_app.rs  windows_config.rs
apps/mcp/: package.json
apps/mcp/src/: index.ts
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  token-creator.tsx
apps/web/app/api/auth/[...all]/: route.ts
apps/web/app/api/collectors/token/: route.ts
apps/web/app/api/ingest/heartbeat/: route.ts
apps/web/app/api/ingest/session/end/: route.ts
apps/web/app/api/ingest/session/start/: route.ts
apps/web/app/api/ingest/telemetry/batch/: route.ts
apps/web/app/sessions/: page.tsx
apps/web/app/sessions/[id]/: page.tsx
apps/web/lib/: auth.ts  collector-auth.ts  db.ts
crates/acc-shared-memory/: Cargo.toml
crates/acc-shared-memory/src/: lib.rs
crates/collector-core/: Cargo.toml
crates/collector-core/src/: lib.rs
crates/telemetry-core/: Cargo.toml
crates/telemetry-core/src/: lib.rs
docs/: api.md  architecture.md  database.md  development.md  mcp.md  releases.md  sim-adapters.md  windows-collector.md
scripts/: check-docker.mjs  verify-windows-collector.ps1
