[package]
name = "collector-windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
acc-shared-memory = { path = "../../crates/acc-shared-memory" }
anyhow.workspace = true
clap.workspace = true
collector-core = { path = "../../crates/collector-core" }
telemetry-core = { path = "../../crates/telemetry-core" }
tokio = { workspace = true, features = ["signal"] }
uuid.workspace = true
