[package]
name = "acc-shared-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
telemetry-core = { path = "../telemetry-core" }
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Memory",
] }
