[package]
name = "collector-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
telemetry-core = { path = "../telemetry-core" }
uuid.workspace = true
